--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-dropzone": "^14.3.8",
+    "react-icons": "^5.5.0",
     "react-katex": "^3.1.0",
     "recharts": "^3.6.0",
     "sql.js": "^1.13.0",
