--- a/web/package.json
+++ b/web/package.json
@@ -11,13 +11,17 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.11",
     "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.86.0",
     "canvas-confetti": "^1.9.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "jszip": "^3.10.1",
     "katex": "^0.16.27",
+    "lucide-react": "^0.561.0",
     "next": "16.0.5",
     "next-pwa": "^5.6.0",
     "openai": "^6.10.0",
@@ -29,9 +33,12 @@
     "react-katex": "^3.1.0",
     "recharts": "^3.6.0",
     "sql.js": "^1.13.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "ts-fsrs": "^5.2.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
@@ -42,12 +49,15 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/sql.js": "^1.4.9",
+    "autoprefixer": "^10.4.17",
     "babel-plugin-react-compiler": "1.0.0",
     "baseline-browser-mapping": "^2.9.7",
     "eslint": "^9",
     "eslint-config-next": "16.0.5",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   }
