--- a/web/package.json
+++ b/web/package.json
@@ -22,12 +22,12 @@
     "jszip": "^3.10.1",
     "katex": "^0.16.27",
     "lucide-react": "^0.561.0",
-    "next": "16.0.5",
+    "next": "^16.1.0",
     "next-pwa": "^5.6.0",
     "openai": "^6.10.0",
     "pdf-parse": "^2.4.5",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-katex": "^3.1.0",
