--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@radix-ui/react-avatar": "^1.1.11",
     "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/ssr": "^0.8.0",
@@ -23,7 +24,6 @@
     "katex": "^0.16.27",
     "lucide-react": "^0.561.0",
     "next": "^16.1.0",
-    "next-pwa": "^5.6.0",
     "openai": "^6.10.0",
     "pdf-parse": "^2.4.5",
     "react": "^19.2.3",
