--- a/web/package.json
+++ b/web/package.json
@@ -31,6 +31,7 @@
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-katex": "^3.1.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^3.6.0",
     "sql.js": "^1.13.0",
     "tailwind-merge": "^3.4.0",
